--- a/relay/sources/apache/rudder-apache-relay-ssl.conf
+++ b/relay/sources/apache/rudder-apache-relay-ssl.conf
@@ -44,10 +44,14 @@ Alias /inventories /var/rudder/inventories/incoming
   AuthName "WebDAV Storage"
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav-initial
-  Require valid-user
 
-  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
-  Include /opt/rudder/etc/rudder-networks-24.conf
+  <RequireAll>
+    Require valid-user
+    <RequireAny>
+      # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+      Include /opt/rudder/etc/rudder-networks-24.conf
+    </RequireAny>
+  </RequireAll>
 
   <LimitExcept PUT>
     Require all denied
@@ -61,10 +65,14 @@ Alias /inventory-updates /var/rudder/inventories/accepted-nodes-updates
   AuthName "WebDAV Storage"
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav
-  Require valid-user
 
-  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
-  Include /opt/rudder/etc/rudder-networks-24.conf
+  <RequireAll>
+    Require valid-user
+    <RequireAny>
+      # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+      Include /opt/rudder/etc/rudder-networks-24.conf
+    </RequireAny>
+  </RequireAll>
 
   <LimitExcept PUT>
     Require all denied
@@ -78,10 +86,14 @@ Alias /reports /var/rudder/reports/incoming
   AuthName "WebDAV Storage"
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav
-  Require valid-user
 
-  # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
-  Include /opt/rudder/etc/rudder-networks-24.conf
+  <RequireAll>
+    Require valid-user
+    <RequireAny>
+      # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+      Include /opt/rudder/etc/rudder-networks-24.conf
+    </RequireAny>
+  </RequireAll>
 
   <LimitExcept PUT>
     Require all denied
