Fixes #17112: Missing LDAP write operations to promote a node to relay
Fixes #13658: There are no eventlogs when converting a node to relay

--- a/webapp/sources/rudder/rudder-web/src/main/resources/eventLogTypeNames.properties
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/eventLogTypeNames.properties
@@ -59,6 +59,7 @@ rudder.log.eventType.names.AgentRunStartHourModified=Property 'Agent run start h
 rudder.log.eventType.names.AgentRunStartMinuteModified=Property 'Agent run start minute' modified
 rudder.log.eventType.names.RudderSyslogProtocolModified=Property 'Rudder syslog protocol' modified
 rudder.log.eventType.names.NodeModified=Node modified
+rudder.log.eventType.names.NodePromotedToRelay=Node promoted to relay
 rudder.log.eventType.names.PolicyModeModified=Global Policy Mode modified
 rudder.log.eventType.names.RudderVerifyCertificates=Property 'Verification of HTTPS certificates' modified
 
