--- a/webapp/sources/api-doc/components/schemas/node-settings.yml
+++ b/webapp/sources/api-doc/components/schemas/node-settings.yml
@@ -37,16 +37,4 @@ properties:
       - preparing-eol
     example: enabled
   agentKey:
-    type: object
-    description: The agent key information
-    properties:
-      status:
-        type: string
-        enum:
-          - "certified"
-          - "undefined"
-        description: Status of certificate verification (reset to `undefined` to trust a new certificate)
-      value:
-        type: string
-        format: PEM
-        description: Certificate (or public key for <6.0 agents) used by the agent
+    $ref: agent-key.yml
