--- a/webapp/sources/pom.xml
+++ b/webapp/sources/pom.xml
@@ -349,34 +349,39 @@ limitations under the License.
     <rudder-major-version>6.1</rudder-major-version>
     <rudder-version>6.1.0~alpha1-SNAPSHOT</rudder-version>
 
-    <scala-version>2.13.1</scala-version>
+    <scala-version>2.13.2</scala-version>
     <scala-binary-version>2.13</scala-binary-version>
     <scala-parser-combinators-version>1.1.2</scala-parser-combinators-version>
-    <scala-xml-version>1.2.0.1-rudder</scala-xml-version>
+    <scala-xml-version>1.3.0</scala-xml-version>
     <lift-version>3.4.1</lift-version>
-    <slf4j-version>1.7.28</slf4j-version>
+    <slf4j-version>1.7.30</slf4j-version>
     <logback-version>1.2.3</logback-version>
     <junit-version>4.12</junit-version>
-    <jodatime-version>2.10.3</jodatime-version>
+    <jodatime-version>2.10.5</jodatime-version>
     <jodaconvert-version>2.2.1</jodaconvert-version>
     <commons-io-version>2.6</commons-io-version>
     <commons-lang-version>2.6</commons-lang-version>
-    <commons-codec-version>1.13</commons-codec-version>
-    <spring-version>5.1.9.RELEASE</spring-version>
-    <spring-security-version>5.1.6.RELEASE</spring-security-version>
-    <jgit-version>5.5.0.201909110433-r</jgit-version>
+    <commons-codec-version>1.14</commons-codec-version>
+    <commons-fileupload>1.4</commons-fileupload>
+    <spring-version>5.2.5.RELEASE</spring-version>
+    <spring-security-version>5.3.1.RELEASE</spring-security-version>
+    <jgit-version>5.7.0.202003110725-r</jgit-version>
     <cglib-version>3.3.0</cglib-version>
     <asm-version>5.2</asm-version>
-    <bcpkix-jdk15on-version>1.63</bcpkix-jdk15on-version>
-    <silencer-lib-version>1.4.4</silencer-lib-version>
+    <bcpkix-jdk15on-version>1.65</bcpkix-jdk15on-version>
+    <silencer-lib-version>1.6.0</silencer-lib-version>
     <better-files-version>3.8.0</better-files-version>
-    <sourcecode-version>0.1.7</sourcecode-version>
-    <quicklens-version>1.4.12</quicklens-version>
-    <hikaricp-version>3.4.0</hikaricp-version>
-    <nuprocess-version>1.2.5</nuprocess-version>
-    <postgresql-version>42.2.8</postgresql-version>
+    <sourcecode-version>0.2.1</sourcecode-version>
+    <quicklens-version>1.5.0</quicklens-version>
+    <hikaricp-version>3.4.2</hikaricp-version>
+    <nuprocess-version>2.0.0</nuprocess-version>
+    <postgresql-version>42.2.12</postgresql-version>
     <json-path-version>2.4.0</json-path-version>
-    <scalaj-version>2.3.0</scalaj-version>
+    <scalaj-version>2.4.2</scalaj-version>
+    <unboundid-version>5.0.1</unboundid-version>
+    <fastparse-version>2.2.4</fastparse-version>
+    <config-version>1.4.0</config-version>
+    <cafeine-version>2.8.1</cafeine-version>
     <!--
       These one must be updated to work together
       We declare cats in "test" here, because it is not directly needed
@@ -384,7 +389,7 @@ limitations under the License.
     -->
     <monix-version>3.0.0</monix-version>
     <cats-version>2.0.0</cats-version>
-    <specs2-version>4.7.0</specs2-version>
+    <specs2-version>4.9.3</specs2-version>
     <doobie-version>0.8.8</doobie-version>
     <fs2-version>2.1.0</fs2-version>
     <http4s-version>0.21.0-M6</http4s-version>
