--- a/webapp/sources/rudder/rudder-rest/pom.xml
+++ b/webapp/sources/rudder/rudder-rest/pom.xml
@@ -113,12 +113,12 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
     <dependency>
       <groupId>com.typesafe</groupId>
       <artifactId>config</artifactId>
-      <version>1.3.1</version>
+      <version>${config-version}</version>
     </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>1.4</version>
+      <version>${commons-fileupload}</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -138,13 +138,13 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
     <dependency>
       <groupId>org.scalaj</groupId>
       <artifactId>scalaj-http_${scala-binary-version}</artifactId>
-      <version>2.4.2</version>
+      <version>${scalaj-version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.lihaoyi</groupId>
       <artifactId>sourcecode_${scala-binary-version}</artifactId>
-      <version>0.1.7</version>
+      <version>${sourcecode-version}</version>
     </dependency>
 
     <!-- Testing Liftweb -->
