Fixes #17254: rename stdlib to resourcelib

--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -2,7 +2,7 @@
     ncf="/usr/share/ncf"
     cfengine="/opt/rudder/bin/cf-promises"
     py_modules="tools/"
-    rudderc_libs="libs/"
+    rudderc_stdlib="libs/"
     translate_config="tools/translate_config.toml"
     compile_input="tests/test_files/tester/"
     compile_output="tests/test_files/tester/"
