--- a/webapp/sources/api-doc/components/schemas/directive.yml
+++ b/webapp/sources/api-doc/components/schemas/directive.yml
@@ -44,6 +44,13 @@ properties:
     type: boolean
     description: If true it is an internal Rudder directive
     example: false
+  policyMode:
+    type: string
+    enum:
+      - enforce
+      - audit
+    description: Policy mode of the directive
+    example: audit
   tags:
     type: array
     items:
