--- a/webapp/sources/pom.xml
+++ b/webapp/sources/pom.xml
@@ -381,6 +381,7 @@ limitations under the License.
     <fastparse-version>2.2.4</fastparse-version>
     <config-version>1.4.0</config-version>
     <cafeine-version>2.8.1</cafeine-version>
+    <jgrapht-version>1.4.0</jgrapht-version>
     <!--
       These one must be updated to work together
       We declare cats in "test" here, because it is not directly needed
@@ -738,6 +739,12 @@ limitations under the License.
       <groupId>org.typelevel</groupId>
       <artifactId>cats-effect_${scala-binary-version}</artifactId>
       <version>${cats-effect-version}</version>
+    </dependency>
+    <!-- graph library for group properties -->
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-core</artifactId>
+      <version>${jgrapht-version}</version>
     </dependency>
 
     <!--  test -->
