Fixes #17355: update reserved keywords list

--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -2,7 +2,7 @@
     ncf="/usr/share/ncf"
     cfengine="/opt/rudder/bin/cf-promises"
     py_modules="/opt/rudder/share/python/"
-    rudderc_libs="/opt/rudder/share/rudder-lang/lib/"
+    rudderc_stdlib="/opt/rudder/share/rudder-lang/lib/"
     translate_config="/opt/rudder/share/rudder-lang/tools/translate_config.toml"
     compile_input="/var/rudder/configuration-repository/techniques/ncf_techniques/"
     compile_output="/tmp/rudderc/tester/"
