Fixes #17374: Add a cargo-deny config for rudder-lang

--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 readme = "README.adoc"
 homepage = "https://www.rudder.io"
 repository = "https://github.com/Normation/rudder"
-license = "GPL3"
+license = "GPL-3.0-or-later"
 
 [[bin]]
 name = "rudderc"
