Fixes #17403: refactoring io usage and configuration

--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -1,10 +1,17 @@
-[default_paths]
+[shared]
+    stdlib="libs/" # only required field for rudderc
+    generic_methods="tools/generic_methods.toml"
     ncf="/usr/share/ncf"
+
+[compile]
+    source="./tests/test_files/tester/"
+    dest="./tests/test_files/tester/"
+    # format="dsc"
+
+[translate]
+    source="tests/test_files/tester/"
+    dest="tests/test_files/tester/"
+
+[testing_loop]
     cfengine="/opt/rudder/bin/cf-promises"
     py_modules="tools/"
-    rudderc_stdlib="libs/"
-    translate_config="tools/translate_config.toml"
-    compile_input="tests/test_files/tester/"
-    compile_output="tests/test_files/tester/"
-    translate_input="tests/test_files/tester/"
-    translate_output="tests/test_files/tester/"
