--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -1,10 +1,18 @@
-[default_paths]
+[shared]
+    stdlib="/opt/rudder/share/rudder-lang/lib/"
+    generic_methods="/opt/rudder/share/rudder-lang/tools/generic_methods.toml"
     ncf="/usr/share/ncf"
+
+[compile]
+    source="/var/rudder/configuration-repository/techniques/ncf_techniques/"
+    dest="/tmp/rudderc/tester/"
+    format="cf"
+
+[translate]
+    source="/tmp/rudderc/tester/"
+    dest="/tmp/rudderc/tester/"
+    format="rl" # no other option for now
+
+[testing_loop]
     cfengine="/opt/rudder/bin/cf-promises"
     py_modules="/opt/rudder/share/python/"
-    rudderc_stdlib="/opt/rudder/share/rudder-lang/lib/"
-    translate_config="/opt/rudder/share/rudder-lang/tools/translate_config.toml"
-    compile_input="/var/rudder/configuration-repository/techniques/ncf_techniques/"
-    compile_output="/tmp/rudderc/tester/"
-    translate_input="/tmp/rudderc/tester/"
-    translate_output="/tmp/rudderc/tester/"
