--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -44,6 +44,7 @@ max_pool_size = 5
 url = "https://127.0.0.1:8080"
 user = "rudder"
 password = "password"
+default_password = "rudder"
 verify_certificates = false
 
 [remote_run]
