--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -64,6 +64,8 @@ max_pool_size = 10
 url = "https://127.0.0.1:3030"
 user = "rudder"
 password = "password"
+# Password used for new inventories
+default_password = "rudder"
 verify_certificates = true
 
 [remote_run]
