--- a/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
@@ -206,7 +206,13 @@ inventories.root.directory=/var/rudder/inventories
 # in seconds the watcher will wait for the signature file
 # in case there is only an inventory file before sending
 # only inventory to backend.
-inventories.watcher.waitForSignatureDuration=10
+inventories.watcher.waitForSignatureDuration=10 seconds
+
+#
+# Period for a batch to run and see if any inventories were
+# missed by inotify watchers.
+#
+inventories.watcher.period.garbage.old=5 minutes
 
 #
 # Max number of inventories waiting to be processed internally.
