--- a/relay/sources/Makefile
+++ b/relay/sources/Makefile
@@ -81,7 +81,7 @@ install: build
 	mkdir -p $(DESTDIR)/opt/rudder/bin/
 	mkdir -p $(DESTDIR)/opt/rudder/etc/relayd/
 	mkdir -p $(DESTDIR)/opt/rudder/etc/ssl/
-	mkdir -p $(DESTDIR)/opt/rudder/etc/rudder-pkg/
+	mkdir -m 700 -p $(DESTDIR)/opt/rudder/etc/rudder-pkg/
 	mkdir -p $(DESTDIR)/opt/rudder/share/selinux/
 	mkdir -p $(DESTDIR)/opt/rudder/share/python/
 	mkdir -p $(DESTDIR)/opt/rudder/share/package-scripts/
