--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -6,7 +6,7 @@
 [compile]
     source="./tests/test_files/tester/"
     dest="./tests/test_files/tester/"
-    # format="dsc"
+    format="cfengine"
 
 [translate]
     source="tests/test_files/tester/"
