--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -6,12 +6,11 @@
 [compile]
     source="/var/rudder/configuration-repository/techniques/ncf_techniques/"
     dest="/tmp/rudderc/tester/"
-    format="cf"
+    format="cfengine"
 
 [translate]
     source="/tmp/rudderc/tester/"
     dest="/tmp/rudderc/tester/"
-    format="rl" # no other option for now
 
 [testing_loop]
     cfengine="/opt/rudder/bin/cf-promises"
