Fixes #17737: handle techniques location path properly

--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -4,7 +4,7 @@
     ncf="/usr/share/ncf"
 
 [compile]
-    source="/var/rudder/configuration-repository/techniques/ncf_techniques/"
+    source="/var/rudder/configuration-repository/techniques/" # must be appened with ${technique_category}/${technique_name}.${source_format}
     dest="/tmp/rudderc/tester/"
     format="cfengine"
 
