Fixes #17700: description of global parameter \"rudder\" is misleading

--- a/webapp/sources/rudder/rudder-web/src/main/resources/rudder-system-global-parameter.conf
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/rudder-system-global-parameter.conf
@@ -1,6 +1,6 @@
 [{
   "name": "rudder",
-  "description": "This parameter defines important properties for Rudder and should not be modified. If you modify them, they will be reset at next restart. This value can be overridden by setting a node/group property named \"rudder\" containing the keys you want to override.",
+  "description": "This parameter defines important properties for Rudder and must always be defined. You can't modify them directly, but you can override them by setting a group or node property named \"rudder\" with updated values.",
   "value": {
     "packages": {
       "installed_cache_expire": 60,
