--- a/webapp/sources/api-doc/components/schemas/group.yml
+++ b/webapp/sources/api-doc/components/schemas/group.yml
@@ -78,3 +78,20 @@ properties:
       format: condition
       example: "group_ubuntu"
       description: Conditions defined on nodes in the groups. There is one based on the group id, and one based on the group name.
+  properties:
+    type: array
+    description: Group properties
+    items:
+      type: object
+      required:
+        - name
+        - value
+      properties:
+        name:
+          type: string
+          description: Property name
+          example: os
+        value:
+          format: string or JSON
+          example: debian10
+          description: Property value (can be a string or JSON object)
