Fixes #17821: differenciate classic and dsc generic methods

--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -1,7 +1,8 @@
 [shared]
     stdlib="libs/" # only required field for rudderc
     generic_methods="tools/generic_methods.toml"
-    ncf="/usr/share/ncf"
+    ncf="/usr/share/ncf/tree/30_generic_methods/"
+    dsc_ncf="/home/gpoblon/rudder/windows-agent/packaging/Files/share/initial-policy/ncf/30_generic_methods/"
 
 [compile]
     source="./tests/test_files/tester/"
