Fixes #17956: Typos in CVE api doc

--- a/webapp/sources/api-doc/components/schemas/cveCheck.yml
+++ b/webapp/sources/api-doc/components/schemas/cveCheck.yml
@@ -2,7 +2,7 @@
 # SPDX-FileCopyrightText: 2013-2020 Normation SAS
 type: object
 properties:
-  cveid:
+  cveId:
     type: string
     description: CVE id
     example: CVE-2019-5953
