fixup! Fixes #17821: differenciate classic and dsc generic methods
Fixes #17821: differenciate classic and dsc generic methods

--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -1,8 +1,8 @@
 [shared]
     stdlib="/opt/rudder/share/rudder-lang/lib/"
-    generic_methods="/opt/rudder/share/rudder-lang/tools/generic_methods.toml"
-    ncf="/usr/share/ncf/tree/30_generic_methods/"
-    dsc_ncf="/var/rudder/configuration-repository/dsc/ncf/30_generic_methods/"
+    meta_generic_methods="/opt/rudder/share/rudder-lang/tools/meta_generic_methods.toml"
+    ncf_generic_methods="/usr/share/ncf/tree/30_generic_methods/"
+    dsc_generic_methods="/var/rudder/configuration-repository/dsc/ncf/30_generic_methods/"
 
 [compile]
     source="/var/rudder/configuration-repository/techniques/" # must be appened with ${technique_category}/${technique_name}.${source_format}
