--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -15,4 +15,5 @@
 
 [testing_loop]
     cfengine="/opt/rudder/bin/cf-promises"
+    ncf_tools="/usr/share/ncf/tools/"
     py_modules="/opt/rudder/share/python/"
