--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -7,13 +7,13 @@
     dsc_generic_methods="/home/gpoblon/rudder/windows-agent/packaging/Files/share/initial-policy/ncf/30_generic_methods/"
 
 [compile]
-    source="./tests/test_files/tester/"
-    dest="./tests/test_files/tester/"
+    source="tests/techniques/"
+    dest="tests/techniques/"
     format="cfengine"
 
 [translate]
-    source="tests/test_files/tester/"
-    dest="tests/test_files/tester/"
+    source="tests/techniques/"
+    dest="tests/techniques/"
 
 [testing_loop]
     cfengine="/opt/rudder/bin/cf-promises"
