--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -1,8 +1,7 @@
 # Warning: tilde ('~') not handled in paths
 
 [shared]
-    stdlib="libs/" # only required field for rudderc
-    meta_generic_methods="tools/meta_generic_methods.toml"
+    stdlib="libs/"
     ncf_generic_methods="/usr/share/ncf/tree/30_generic_methods/"
     dsc_generic_methods="/home/gpoblon/rudder/windows-agent/packaging/Files/share/initial-policy/ncf/30_generic_methods/"
 
