--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -1,18 +1,19 @@
 [shared]
-    stdlib="/opt/rudder/share/rudder-lang/lib/"
-    ncf_generic_methods="/usr/share/ncf/tree/30_generic_methods/"
-    dsc_generic_methods="/var/rudder/configuration-repository/dsc/ncf/30_generic_methods/"
+#stdlib="/opt/rudder/share/rudder-lang/lib/"
+#cfengine_methods="/usr/share/ncf/tree/30_generic_methods/"
+#alt_cfengine_methods="/var/rudder/configuration-repository/ncf/30_generic_methods"
+#dsc_methods="/var/rudder/configuration-repository/dsc/ncf/30_generic_methods/"
 
 [compile]
-    source="/var/rudder/configuration-repository/techniques/" # must be appened with ${technique_category}/${technique_name}.${source_format}
-    dest="/tmp/rudderc/tester/"
-    format="cfengine"
+source="/var/rudder/configuration-repository/techniques/" # must be appened with ${technique_category}/${technique_name}.${source_format}
+dest="/tmp/rudderc/tester/"
+format="cfengine"
 
 [translate]
-    source="/tmp/rudderc/tester/"
-    dest="/tmp/rudderc/tester/"
+source="/tmp/rudderc/tester/"
+dest="/tmp/rudderc/tester/"
 
 [testing_loop]
-    cfengine="/opt/rudder/bin/cf-promises"
-    ncf_tools="/usr/share/ncf/tools/"
-    py_modules="/opt/rudder/share/python/"
+cfengine="/opt/rudder/bin/cf-promises"
+ncf_tools="/usr/share/ncf/tools/"
+py_modules="/opt/rudder/share/python/"
