--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -1,21 +1,22 @@
 # Warning: tilde ('~') not handled in paths
 
 [shared]
-    stdlib="libs/"
-    ncf_generic_methods="/usr/share/ncf/tree/30_generic_methods/"
-    dsc_generic_methods="/home/gpoblon/rudder/windows-agent/packaging/Files/share/initial-policy/ncf/30_generic_methods/"
+stdlib="libs/"
+cfengine_methods="repos/ncf/tree/30_generic_methods/"
+alt_cfengine_methods="repos/dsc/plugin/ncf/30_generic_methods/"
+dsc_methods="repos/dsc/packaging/Files/share/initial-policy/ncf/30_generic_methods/"
 
 [compile]
-    source="tests/techniques/"
-    dest="tests/techniques/"
-    format="cfengine"
+source="tests/techniques/"
+dest="tests/techniques/"
+format="cfengine"
 
 [translate]
-    source="tests/techniques/"
-    dest="tests/techniques/"
+source="tests/techniques/"
+dest="tests/techniques/"
 
 [testing_loop]
-    cfengine="/opt/rudder/bin/cf-promises"
-    ncf_tools="/usr/share/ncf/tools/"
-    py_modules="tools/"
+cfengine="/opt/rudder/bin/cf-promises"
+ncf_tools="repos/ncf/tools/"
+py_modules="tools/"
 
