--- a/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/ldapObjectAndAttributes.properties
@@ -90,7 +90,7 @@ os.name.Ubuntu=Ubuntu
 os.name.Redhat=Red Hat
 os.name.Centos=CentOS
 os.name.Fedora=Fedora
-os.name.Suse=SuSE
+os.name.Suse=SUSE
 os.name.Android=Android
 os.name.UnknownLinux=Other Linux
 os.name.Oracle=Oracle Linux Server
