Fixes #18126: rudder-lang tests fail on system with python2

--- a/rudder-lang/Makefile
+++ b/rudder-lang/Makefile
@@ -39,7 +39,7 @@ install: build
 
 test-docs: $(DOC_EXAMPLES)
 
-test:
+test: libs
 	# fires rudderc unit / integration tests
 	cargo test
 	# fires a technique compilation using explicit parameters: path                format verbosity json-output
