Changing pom.pxl to version 7.0.0~alpha1-SNAPSHOT

--- a/webapp/sources/rudder/pom.xml
+++ b/webapp/sources/rudder/pom.xml
@@ -39,7 +39,7 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
   <parent>
     <groupId>com.normation</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>6.1.4-SNAPSHOT</version>
+    <version>6.2.0~alpha1-SNAPSHOT</version>
   </parent>
 
 
