--- a/webapp/sources/ldap-inventory/inventory-provisioning-core/pom.xml
+++ b/webapp/sources/ldap-inventory/inventory-provisioning-core/pom.xml
@@ -35,7 +35,7 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
   <parent>
     <groupId>com.normation.inventory</groupId>
     <artifactId>inventory-parent</artifactId>
-    <version>6.1.4-SNAPSHOT</version>
+    <version>6.2.0~alpha1-SNAPSHOT</version>
   </parent>
 
   <artifactId>inventory-provisioning-core</artifactId>
