--- a/webapp/sources/utils/pom.xml
+++ b/webapp/sources/utils/pom.xml
@@ -19,7 +19,7 @@ limitations under the License.
   <parent>
     <groupId>com.normation</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>6.1.4-SNAPSHOT</version>
+    <version>6.2.0~alpha1-SNAPSHOT</version>
   </parent>
 
   <artifactId>utils</artifactId>
